--- a/recipe.css
+++ b/recipe.css
@@ -10,9 +10,9 @@
 		
 		div.content{
 			background-color: white;
-			margin: 60px 10% 80px 10%;
-			padding: 0px 30px 30px 30px;
-			min-width: 350px;
+			margin: 40px 8px 40px 8px;
+			padding: 0px 8px 20px 8px;
+			/*min-width: 350px;*/
 			box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.1);
 			overflow: visible;	
 		}
@@ -78,7 +78,7 @@
 			width: 100%;
 			color: white;
 			background-color: #6C829DC0;
-			height: 80px;
+			height: 50px;
 		}
 		
 		/* All the td of the table that has the info class*/
@@ -86,13 +86,13 @@
 		table.info td{
 			text-align: center;
 			vertical-align: top;
-			font-size: 14px;
+			font-size: 12px;
 		}
 		
 		table.info th{
 			vertical-align: bottom;
 			padding-bottom: 8px;
-			font-size: 16px;
+			font-size: 14px;
 		}
 		
 		img.info{
@@ -104,7 +104,7 @@
 		}
 		
 		div.col{
-			width: 45%;
+			width: 100%;
 			margin-top: 20px;
 		}
 		
@@ -119,16 +119,18 @@
 		
 		div.col1{
 			display: inline-block;
-			margin-right: 10%;
+			/*margin-right: 10%;*/
+			margin-bottom: 20px
 		}
 		
 		div.col2{
-			float: right;
+			/*float: right;*/
 		}
 		
 		div.ingredients p{
 			text-align: center;
 			font-size: 14px;
+			font-weight: bold;
 			border: 1px solid lightgray;
 			padding: 8px 0;
 			margin-top: 1px;
@@ -153,6 +155,7 @@
 			padding-left: 10px;
 			padding-bottom: 10px;
 			font-size: 14px;
+			font-weight: bold;
 		}
 		
 		table.instructions td{
@@ -162,3 +165,50 @@
 		table.instructions tr{
 			height: 40px;
 		}
+		
+		
+	/* Desktop Styles*/
+	@media only screen and (min-width: 768px){
+		div.content{			
+			margin: 60px 10% 80px 10%;
+			padding: 0px 30px 30px 30px;
+			min-width: 350px;
+		}
+		
+		table.info{
+			height: 80px;
+		}
+		
+	/* All the td of the table that has the info class*/
+		
+		table.info td{
+			font-size: 14px;
+		}
+		
+		table.info th{
+			font-size: 16px;
+		}
+
+		div.col{
+			width: 45%;
+		}
+		
+		div.col1{
+			margin-right: 10%;
+		}
+		
+		div.col2{
+			float: right;
+		}		
+	}
+	
+	/* Very Large Screen*/
+	@media only screen and (min-width: 900px){
+		div.content{
+			margin-left: auto;
+			margin-right: auto;
+			width: 650px;
+		}			
+	}
+	
+		
